--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,30 @@ services:
     environment:
       DJANGO_SETTINGS_MODULE: coffee_api.settings
       PYTHONUNBUFFERED: 1
+    restart: always
     env_file:
       - ./backend/.env
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8.0
+    container_name: mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+    volumes:
+      - mysql_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   
   frontend:
     build:
@@ -30,3 +52,6 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+
+volumes:
+  mysql_data: 
