--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django>=5.2.4",
     "django-cloudinary-storage>=0.3.0",
     "django-cors-headers>=4.7.0",
+    "django-redis>=6.0.0",
     "djangorestframework>=3.16.0",
     "dotenv>=0.9.9",
     "gunicorn>=23.0.0",
