--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,6 @@ dependencies = [
     "djangorestframework>=3.16.0",
     "dotenv>=0.9.9",
     "gunicorn>=23.0.0",
-    "mysqlclient>=2.2.7",
     "pillow>=11.3.0",
+    "psycopg2-binary>=2.9.10",
 ]
