--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "djangorestframework>=3.16.0",
     "dotenv>=0.9.9",
     "gunicorn>=23.0.0",
+    "loguru>=0.7.3",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
+    "pygelf>=0.4.3",
 ]
