--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,16 +5,20 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "celery>=5.5.3",
     "cloudinary>=1.44.1",
     "django>=5.2.4",
+    "django-celery-beat>=2.8.1",
     "django-cloudinary-storage>=0.3.0",
     "django-cors-headers>=4.7.0",
     "django-redis>=6.0.0",
     "djangorestframework>=3.16.0",
     "dotenv>=0.9.9",
+    "flower>=2.0.1",
     "gunicorn>=23.0.0",
     "loguru>=0.7.3",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
     "pygelf>=0.4.3",
+    "redis>=6.2.0",
 ]
