--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,418 @@
-# Environment files
+# ================================
+# SENSITIVE INFORMATION & SECRETS
+# ================================
+
+# Environment files (CRITICAL - Contains passwords, API keys, etc.)
 .env
+.env.*
 .env.local
 .env.production
+.env.development
+.env.staging
+.env.test
 *.env
+backend/.env
+backend/.env.*
+frontend/coffee_shop/.env
+frontend/coffee_shop/.env.*
 
-# Other sensitive files
-/backend/.env
+# Django secret key files
+secret_key.txt
+secrets.py
+secrets.json
 
-/frontend/coffee_shop/.env
+# Database files (may contain sensitive data)
+*.db
+*.sqlite
+*.sqlite3
+db.sqlite3
+backend/db.sqlite3
+
+# SSL/TLS certificates and keys
+*.pem
+*.key
+*.crt
+*.cert
+*.p12
+*.pfx
+ssl/
+certs/
+certificates/
+nginx/ssl/
+
+# SSH keys
+id_rsa
+id_rsa.pub
+*.ssh
+.ssh/
+
+# API keys and tokens
+api_keys.txt
+tokens.txt
+*.token
+.secrets/
+
+# Docker secrets
+docker-compose.override.yml
+docker-compose.secrets.yml
+
+# Cloud provider credentials
+.aws/
+.gcp/
+.azure/
+credentials.json
+service-account.json
+
+# Backup files that might contain sensitive data
+*.backup
+*.bak
+*.dump
+*.sql
+
+# ================================
+# PYTHON & DJANGO
+# ================================
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+.env/
+.venv/
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+backend/.venv/
+backend/venv/
+
+# Django specific
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
+staticfiles/
+static/
+celerybeat-schedule
+celerybeat.pid
+
+# Django migrations (optional - uncomment if you want to ignore)
+# */migrations/*.py
+# !*/migrations/__init__.py
+
+# ================================
+# NODE.JS & REACT
+# ================================
+
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# ESLint cache
+.eslintcache
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# ================================
+# DOCKER & CONTAINERS
+# ================================
+
+# Docker override files
+docker-compose.override.yml
+docker-compose.prod.yml.backup
+Dockerfile.backup
+
+# Docker volumes data
+docker-volumes/
+volumes/
+
+# Container logs
+*.container.log
+
+# ================================
+# DATABASES & STORAGE
+# ================================
+
+# PostgreSQL
+*.pgsql
+
+# Redis dumps
+dump.rdb
+
+# MongoDB dumps
+*.bson
+
+# Elasticsearch data
+elasticsearch/
+
+# ================================
+# LOGS & MONITORING
+# ================================
+
+# Log files
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Graylog data
+graylog_data/
+
+# ================================
+# IDE & EDITOR FILES
+# ================================
+
+# VS Code
+.vscode/
+*.code-workspace
+
+# PyCharm
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# ================================
+# OPERATING SYSTEM FILES
+# ================================
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# ================================
+# TEMPORARY & CACHE FILES
+# ================================
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# Cache directories
+.cache/
+.pytest_cache/
+
+# ================================
+# BACKUP & ARCHIVE FILES
+# ================================
+
+# Backup files
+*.backup
+*.bak
+*.old
+*.orig
+
+# Archive files (often contain sensitive data)
+*.zip
+*.tar
+*.tar.gz
+*.tgz
+*.rar
+*.7z
+
+# ================================
+# TESTING & COVERAGE
+# ================================
+
+# Test results
+.coverage
+.pytest_cache/
+htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+.hypothesis/
+
+# ================================
+# PRODUCTION DEPLOYMENT FILES
+# ================================
+
+# Production configurations
+production/
+prod/
+config/production/
+.env.production.local
+
+# Deployment scripts with secrets
+deploy-secrets.sh
+production-deploy.sh
+
+# CI/CD files that might contain secrets
+.github/secrets/
+.gitlab-ci-secrets.yml
+
+# ================================
+# MISCELLANEOUS
+# ================================
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# IPython profile
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
