--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,16 @@ services:
     restart: unless-stopped
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
-    command: ["redis-server","--requirepass", "${REDIS_PASSWORD}"]
+    command: >
+      redis-server
+      --requirepass ${REDIS_PASSWORD}
+      --maxmemory 536870912
+      --maxmemory-policy allkeys-lru
+      --save 900 1
+      --save 300 10
+      --save 60 10000
+      --appendonly yes
+      --appendfsync everysec
     ports:
       - "6379:6379"
     volumes:
@@ -88,6 +97,42 @@ services:
       - .env
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          memory: 768M
+        reservations:
+          memory: 256M
+    healthcheck:
+      test: ["CMD", "sh", "-c", "redis-cli -a \"$$REDIS_PASSWORD\" ping || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
+  redis-init:
+    image: redis:latest
+    container_name: redis-init
+    depends_on:
+      redis:
+        condition: service_healthy
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    volumes:
+      - ./redis/init-redis.sh:/init-redis.sh
+    command: >
+      sh -c "
+        echo 'Waiting for Redis to be ready...' &&
+        sleep 5 &&
+        echo 'Configuring Redis memory settings...' &&
+        redis-cli -h redis -a $$REDIS_PASSWORD config set maxmemory 536870912 &&
+        redis-cli -h redis -a $$REDIS_PASSWORD config set maxmemory-policy allkeys-lru &&
+        echo 'Redis configuration completed!' &&
+        redis-cli -h redis -a $$REDIS_PASSWORD config get maxmemory &&
+        redis-cli -h redis -a $$REDIS_PASSWORD config get maxmemory-policy
+      "
+    networks:
+      - app-network
+    restart: "no"
     healthcheck:
       test: ["CMD", "sh", "-c", "redis-cli -a \"$$REDIS_PASSWORD\" ping || exit 1"]
       interval: 10s
