--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "django-cors-headers>=4.7.0",
     "django-redis>=6.0.0",
     "djangorestframework>=3.16.0",
+    "djangorestframework-simplejwt>=5.5.1",
     "dotenv>=0.9.9",
     "flower>=2.0.1",
     "gunicorn>=23.0.0",
