--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "djangorestframework-simplejwt>=5.5.1",
     "dotenv>=0.9.9",
     "flower>=2.0.1",
+    "graypy>=2.1.0",
     "gunicorn>=23.0.0",
     "loguru>=0.7.3",
     "pillow>=11.3.0",
