--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "celery>=5.5.3",
     "cloudinary>=1.44.1",
+    "dj-database-url>=2.1.0",
     "django>=5.2.4",
     "django-celery-beat>=2.8.1",
     "django-cloudinary-storage>=0.3.0",
